# ldtk-codegen

./: Cargo.toml  README.md  fetch.sh  ldtk-codegen.code-workspace  ldtk-codegen.todo
demo/: Cargo.toml  flake.nix
demo/src/: demo.ldtk  demo.rs  main.rs
demo/src/demo/backups/a2a4fe00-7820-11ed-b6fd-9b53622ece75_2023-08-03_16-11-03_crash/: demo.ldtk
src/: definitions.rs  header_template.rs  main.rs  schema.rs  typedefs.rs
src/level/: entities.rs  int_grid.rs  mod.rs  tiles.rs
src/templates/: color.rs  header.rs  math.rs
