[package]
name = "ldtk-codegen"
version = "1.0.2"
edition = "2021"
authors = ["InfiniteCoder <nayka.0.lobach.01@gmail.com>"]
description = "Generate typed rust code from LDtk Project"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/ldtk-codegen/"
license = "Apache-2.0"
keywords = ["gamedev", "LDtk", "codegen"]
categories = [
    "api-bindings",
    "command-line-utilities",
    "development-tools::ffi",
    "game-development",
    "game-engines",
]

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
codegen = "0.2.0"
clap = { version = "4.3.19", features = ["derive"] }
paste = "1.0.14"
convert_case = "0.6.0"
itertools = "0.11.0"
num = "0.4.1"
