[package]
name = "demo"
version = "0.0.0"
edition = "2021"
authors = ["InfiniteCoder <nayka.0.lobach.01@gmail.com>"]
description = "Generate rust raylib project to run in browser"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/raylib-project-generator/"
license = "Apache-2.0"
keywords = ["gamedev", "graphics", "raylib"]
categories = [
    "command-line-utilities",
    "config",
    "development-tools::build-utils",
    "game-development",
    "template-engine",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.raylib]
version = "4.5.0"
git = "https://github.com/litten2up/raylib-rs"
branch = "4.5.0"
