[package]
name = "demo"
version = "0.2.0"
edition = "2021"
authors = ["InfiniteCoder <info@infinitecoder.org>"]
description = "Demo for LDtk CodeGen"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/ldtk-codegen/"
license = "Apache-2.0"
keywords = ["gamedev", "graphics", "raylib"]
categories = ["game"]

[dependencies]
anyhow = "1.0.72"

[dependencies.raylib]
version = "4.5.0"
git = "https://github.com/litten2up/raylib-rs"
branch = "4.5.0"
